2011-01-02  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c, doc/aprx-manual.odt:
	    Unlimit the number of "igate-group N" parameter's N value range.

	* aprsis.c, aprx.c, beacon.c, config.c, digipeater.c, dprsgw.c,
	  filter.c, historydb.c, igate.c, interface.c, keyhash.c, kiss.c,
	  netresolver.c, ttyreader.c:
	    Cleaning compiling on a very old FreeBSD -- essentially K&R C
	    compiler (gcc 2.95.4) not permitting variable declarations
	    anywhere but beginning of code block.

2011-01-01  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c:
	    Always init interface specific Erlang accounting

	* filter.c:
	    Negative ranges on filters means "outside the distance".
	    This allows adding "substractive" filters that tell
	    "don't pass messages to receipients outside given range".

	* configure.in, interface.c, cellmalloc.c, timestamp.c,
	  kiss.c, historydb.h, netax25.c, pbuf.h, aprx.c, aprx.h,
	  filter.c:
	    Clean autoconfig tests, make the code compilable on oldish
	    FreeBSD.

	* configure.in, aprx.h, aprx.c, agwpesocket.c, interface.c:
	    Configuration option --enable-agwpe  to enable AGWPE socket
	    interface code.

	* configure.in, aprx.h, aprx.c, aprsis.c, ax25.c, beacon.c,
	  digipeater.c, dpwsgw.c, erlang.c, filter.c, historydb.c,
	  igate.c, interface.c, parse_aprs.c, telemetry.c, ttyreader.c:
	    Configuration option  --disable-igate   for embedding
	    code without igate network connection. Disables DPRS GW code,
	    and all of historydb, igate.c, aprsis.c.

	* aprx.c, VERSION, INSTALL, README, TODO
	    Version: 2.02

	* aprx.h, interface.c:
	    A  null-device   for sinking infinite digipeat output.
	    A debug tool.

	* aprx.h, interface.c, historydb.c, historydb.h, pbuf.h:
	    Properly track "heard from interface(group)" information
	    for tx-igate processing.  Now a full APRSIS traffic feed
	    won't transmit anything to RF, unless explicit manual