@@ -29,6 +29,10 @@ AC_CHECK_HEADERS(string.h strings.h)
 AC_CHECK_HEADERS(pty.h)
 AC_CHECK_HEADERS(pthread.h)
 
+dnl Check for varargs
+AC_CHECK_HEADERS(stdarg.h varargs.h)
+AC_FUNC_VPRINTF
+
 dnl Checks for libraries.
 AC_SUBST(LIBM)
 AC_CHECK_FUNCS(atan2f,,
